translation-tool/inputs/source_meta/objects/HSvc_SDD__c.object
<CustomObject>
    <fields>
        <fullName>ASConnectionCurr__c</fullName>
        <description>Specifies current number of connections.</description>
        <label>ASConnectionCurr</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASConnectionsAvg__c</fullName>
        <description>Specifies average number of connections in past 3 days.</description>
        <label>ASConnectionsAvg</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>SDD</relationshipLabel>
        <relationshipName>SDD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SDD</relationshipLabel>
        <relationshipName>SDD</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Activity</label>
        <referenceTo>Hsvc_CaseActivity__c</referenceTo>
        <relationshipLabel>SDD</relationshipLabel>
        <relationshipName>SDD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GWNumusersAvg__c</fullName>
        <description>Specifies average users per GW per day for past 3 days.</description>
        <label>GWNumusersAvg</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWNumusersCurr__c</fullName>
        <description>Species number of current users.</description>
        <label>GWNumusersCurr</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Information on failures.</description>
        <label>Message</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanSpeed__c</fullName>
        <description>Specifies the plan speed.</description>
        <label>PlanSpeed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Satellite__c</fullName>
        <description>Specifies if the passed SAN is a Jupiter or Space way SAN.</description>
        <label>Satellite</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the calls were successful</description>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <label>SDD</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SDD-{0000}</displayFormat>
        <label>SDD ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDD</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>